--- a/tasks/i3.yml
+++ b/tasks/i3.yml
@@ -29,6 +29,17 @@
     - i3
     - packages
 
+- name: Create ~/Pictures directory
+  become: yes
+  become_user: m47h4r
+  ansible.builtin.file:
+    path: ~/Pictures
+    state: directory
+    mode: "0755"
+  tags:
+    - directory
+    - system
+
 - name: Enable & start bluetooth service
   ansible.builtin.systemd:
     name: bluetooth
