feat(cmd-utils): add jcal

--- a/tasks/apps.yml
+++ b/tasks/apps.yml
@@ -6,6 +6,7 @@
     - gnome-disk-utility
   tags:
     - disk-apps
+    - apps
     - packages
 
 - name: Install system apps
@@ -16,6 +17,7 @@
     - libreoffice-still
   tags:
     - document-apps
+    - apps
     - packages
 
 - name: Install multimedia apps
@@ -35,6 +37,7 @@
     - blender
   tags:
     - multimedia-apps
+    - apps
     - packages
 
 - name: Install internet apps
@@ -46,6 +49,7 @@
     - qbittorrent
   tags:
     - internet-apps
+    - apps
     - packages
 
 - name: Install chrome
@@ -54,6 +58,7 @@
   ansible.builtin.command: trizen -S --noconfirm google-chrome
   tags:
     - chrome
+    - apps
     - packages
 
 - name: Install slack
@@ -62,6 +67,7 @@
   ansible.builtin.command: trizen -S --noconfirm slack-desktop
   tags:
     - slack
+    - apps
     - packages
 
 - name: Add spotify gpg keys
@@ -70,6 +76,7 @@
   ansible.builtin.shell: "curl -sS https://download.spotify.com/debian/pubkey_5E3C45D7B312C643.gpg | gpg --import -"
   tags:
     - spotify
+    - apps
     - packages
 
 - name: Install spotify
@@ -78,6 +85,7 @@
   ansible.builtin.command: trizen -S --noconfirm spotify
   tags:
     - spotify
+    - apps
     - packages
 
 - name: Add tor browser gpg keys
@@ -86,6 +94,7 @@
   ansible.builtin.command: gpg --auto-key-locate nodefault,wkd --locate-keys torbrowser@torproject.org
   tags:
     - tor-browser
+    - apps
     - packages
 
 - name: Install tor browser
@@ -94,6 +103,7 @@
   ansible.builtin.command: trizen -S --noconfirm tor-browser
   tags:
     - tor-browser
+    - apps
     - packages
 
 - name: Install gnome-shell-pomodoro
@@ -102,4 +112,5 @@
   ansible.builtin.command: trizen -S --noconfirm gnome-shell-pomodoro
   tags:
     - pomodoro
+    - apps
     - packages
