--- a/tasks/pde.yml
+++ b/tasks/pde.yml
@@ -164,7 +164,7 @@
     - noto-fonts
     - noto-fonts-emoji
   tags:
-    - font
+    - fonts
     - pde
     - packages
 
@@ -173,7 +173,7 @@
   become_user: m47h4r
   ansible.builtin.command: trizen -S --noconfirm nerd-fonts-fira-code
   tags:
-    - font
+    - fonts
     - pde
     - packages
 
@@ -182,6 +182,6 @@
   become_user: m47h4r
   ansible.builtin.command: trizen -S --noconfirm vazirmatn-fonts vazir-code-fonts
   tags:
-    - font
+    - fonts
     - pde
     - packages
