--- a/tasks/pde.yml
+++ b/tasks/pde.yml
@@ -81,21 +81,34 @@
     - pde
     - packages
 
-- name: Install vim-plug
-  become: yes
-  become_user: m47h4r
-  ansible.builtin.command: sh -c 'curl -fLo "${XDG_DATA_HOME:-$HOME/.local/share}"/nvim/site/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim'
-  tags:
-    - neovim
-    - pde
-    - packages
-
 - name: Install GHCup
   become: yes
   become_user: m47h4r
-  ansible.builtin.command: trizen -S --noconfirm ghcup-hs-bin
+  ansible.builtin.uri:
+    url: https://downloads.haskell.org/~ghcup/x86_64-linux-ghcup
+    mode: "0755"
+    force: yes
+    dest: ~/bin/ghcup
   tags:
-    - ghc
+    - haskell
+    - pde
+    - packages
+
+- name: Install and set recommended ghc
+  become: yes
+  become_user: m47h4r
+  ansible.builtin.shell: "~/bin/ghcup install && ~/bin/ghcup set"
+  tags:
+    - haskell
+    - pde
+    - packages
+
+- name: Install and set recommended cabal
+  become: yes
+  become_user: m47h4r
+  ansible.builtin.shell: "~/bin/ghcup install cabal"
+  tags:
+    - haskell
     - pde
     - packages
 
